# nfl-bdb-2026

./: .gitignore  pyproject.toml
R/: dataset.R  main.R  models.R  models_dev.R  prep_data.R
analytics/: analysis.qmd  analysis_py.qmd  coverage_assignments.R  coverage_assignments2.R  distance_analysis.R  distance_data.R  gmm.R  helpers.R  idk.R  images.qmd  main.R  model.R  prep_data.R  prep_data2.R  prepped_data.qmd  scratch.R  viz.R  z_model.R
analytics/src/: gmm.py  prep_data.py
