[project]
name = "nfl-bdb-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.2",
    "numpy>=2.3.3",
    "plotnine>=0.15.0",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "ruff>=0.13.2",
    "scikit-learn>=1.7.2",
]
